Remove email from toolbar. Prevent html scroll overflow.

--- a/client/style.css
+++ b/client/style.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow: hidden;
+}
+
 body, html {
   padding: 0;
   margin: 0;
